finish battle-ship

--- a/src/index.html
+++ b/src/index.html
@@ -5,5 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Battle Ship</h1>
+    
+    <main>
+      <div>
+        <div><h3>Computer</h3></div>
+        <div class="computer"></div>
+      </div>
+      <div>
+        <div>
+          <h3>Drag your ships onto computer board</h3>
+          <div>Press 'r' to rotate ship. Current direction:</div>          
+          <div class="direction">down</div>
+          
+        </div>
+        <div class="ships"></div>
+      </div>
+      <div>
+        <div><h3>Player</h3></div>
+        <div class="player"></div>
+      </div>      
+    </main>
+    <div class="winner"></div>
+    <div>Then press start to play</div>
+    <div><button disabled="true" class="startGame">Start Game</button></div>
+    <div><button class="playAgain" type="button">Play Again</button></div>
+  </body>
 </html>
